--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lcpt_front_end",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
